2012-10-26  Martin Becker  <vbmazter@web.de>

	* Initial code generated with kickstarter

2012-11-01  Martin Becker  <vbmazter@web.de>

	* Fixed manual, added icons.

2013-03-11  Martin Becker  <vbmazter@web.de>

	* Added dependency for typo3 version