@@ -18,9 +18,9 @@ Markers:
 <!--  how listview is rendered -->
 <!-- ###LISTVIEW### -->
 <div class="olc">
-    <h2 class="fltab"><span>&#9733; WEITESTER FLUG &#9733;</span></h2>
     <!-- how the best flight is rendered -->
     <!-- ###FLIGHT_BEST### -->
+    <h2 class="fltab"><span>&#9733; WEITESTER FLUG &#9733;</span></h2>
     <div class="fltab">
         <table border="0" width="100%">
             <tr>
@@ -39,8 +39,8 @@ Markers:
     </div>
     <!-- ###FLIGHT_BEST### -->
 
-    <h2 class="nfltab"><span>###TITLE_LIST###</span></h2>
-    <div class="nfltab">
+    <h2><span>###TITLE_LIST###</span></h2>
+    <div>
         <ul>            
             <!-- how one flight in listview is rendered -->
             <!-- ###FLIGHT_LIST### -->
